<resources>
    <string name="app_name">KUMA</string>
    <string name="begin_00_00">BEGIN 00:00</string>
    <string name="place">PLACE</string>
    <string name="memo">MEMO</string>
    <string name="end_00_00">END 00:00</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="id">id</string>
    <string name="title">TITLE</string>
    <string name="add">ADD</string>
    <string name="date">DATE</string>
    <string name="timetable">timetable</string>
    <string name="app_full_name">高知工科大学専用時間割アプリ</string>
    <string name="held_quarter">開講Q</string>
    <string name="search">検索</string>
    <string name="back">戻る</string>
    <string name="entry">登録</string>
    <string name="lecture_name">講義名</string>
    <string name="search_lecture">講義検索</string>
    <string name="result_lecture">検索結果</string>
    <string name="teacher_name">教員名</string>
    <string name="classroom">教室名</string>
    <string name="day_week">曜日</string>
    <string name="period_time">時限</string>
    <string name="held_year">開講年度</string>
    <string name="ReturnSentence"><u>講義検索画面に戻る</u></string>
    <string name="move">時間割登録</string>
    <string name="move2">出欠チェック</string>
    <string name="event_advertise">今後のイベント</string>
    <string name="event_name">大学祭１日目の見どころ</string>
</resources>
