<?xml version="1.0" encoding="utf-8"?>
<!-- 講義検索画面のレイアウト -->
<android.support.v7.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".TimetableSearch">


    <!-- ページタイトルの表示 -->
    <ImageView
            android:src="@drawable/title_lecture_search"
            android:scaleType="fitCenter"
            android:layout_height="70dp"
            android:contentDescription="@string/app_name"
            android:layout_width="220dp"
            android:layout_gravity="center"/>
    <!--
    <TextView
            android:id="@+id/title"
            android:background="@+id/background_page_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/search_lecture"
            android:textSize="30sp"
            android:gravity="center"
    />
    -->

    <!-- 各検索項目と入力フォームの表示 -->
    <!--講義名-->
    <TextView
            android:id="@+id/lectureName"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/lecture_name"
    />
    <!--入力フォーム-->
    <EditText
            android:id="@+id/format1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:importantForAutofill="no"
            tools:targetApi="O"
            android:inputType="text"
    />

    <!--教員名-->
    <TextView
            android:id="@+id/teacherName"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/teacher_name"
    />
    <!--入力フォーム-->
    <EditText
            android:id="@+id/format2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:inputType="text"
    />

    <!--開講クォータ-->
    <TextView
            android:id="@+id/quarter"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/held_quarter"
    />
    <!--入力フォーム(プルダウン)-->
    <Spinner
            android:id="@+id/spinner_quarter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorBlack"
            android:gravity="center"
    />

    <!-- ボタンの表示 -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
        <!--検索ボタン-->
        <Button
                android:id="@+id/search_button"
                android:textSize="22sp"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:scaleType="centerInside"
                android:text="@string/search"
                android:background="@drawable/button_style1"
                android:layout_marginTop="40dp"/>

        <!--戻るボタン-->
        <Button
                android:id="@+id/return_search"
                android:textSize="22sp"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:text="@string/back"
                android:background="@drawable/button_style1"
                android:scaleType="centerInside"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="50dp"/>
    </LinearLayout>

</android.support.v7.widget.LinearLayoutCompat>
